# page-scraper

./: README.md  pyproject.toml  requirements.txt  run.py  scraper.py  sku_scraper.py
res/: scraper.minder
